flux/infrastructure/configs/internal-services/uptime-kuma/uptime-kuma.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: internal-services
spec:
  type: ExternalName
  externalName: 192.168.95.9
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingressroute
  namespace: internal-services
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    uptime-kuma.autodiscovery.probe.name: "Uptime Kuma"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.clsn.dev`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: http
          scheme: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: uptime-kuma-public-addprefix
spec:
  addPrefix:
    prefix: /status/public
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: uptime-kuma-public
  namespace: internal-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.middlewares: internal-services-uptime-kuma-public-addprefix@kubernetescrd
    uptime-kuma.autodiscovery.probe.name: "Uptime Kuma Public Status Page"
spec:
  rules:
    - host: status.clsn.cloud
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: uptime-kuma
                port:
                  name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: uptime-kuma-public-assets
  namespace: internal-services
  annotations:
    kubernetes.io/ingress.class: traefik-external
    uptime-kuma.autodiscovery.probe.enabled: "false"
spec:
  rules:
    - host: status.clsn.cloud
      http:
        paths:
          - path: /assets
            pathType: Prefix
            backend: &backend
              service:
                name: uptime-kuma
                port:
                  name: http
          - path: /upload
            pathType: Prefix
            backend: *backend
          - path: /api/status-page/heartbeat/public
            pathType: Exact
            backend: *backend
          - path: /api/status-page/public
            pathType: Exact
            backend: *backend
          - path: /api/entry-page
            pathType: Exact
            backend: *backend
          - path: /icon.svg
            pathType: Exact
            backend: *backend
          - path: /favicon.ico
            pathType: Exact
            backend: *backend
          - path: /icon-192x192.png
            pathType: Exact
            backend: *backend
          - path: /manifest.json
            pathType: Exact
            backend: *backend
